--- a/src/assets/scss/structure/_topbar.scss
+++ b/src/assets/scss/structure/_topbar.scss
@@ -28,7 +28,7 @@
     align-items: center;
     margin: 0 auto;
     height: $header-height;
-    padding: 0 $grid-gutter-width 0 calc(#{$grid-gutter-width} * 0.5)
+    padding: 0 calc(#{$grid-gutter-width} * 3) 0 calc(#{$grid-gutter-width} * 0.5)
     /*rtl: 0 0 0 calc(#{$grid-gutter-width} * 0.5) */
     ;
 
